--- a/carrito.html
+++ b/carrito.html
@@ -20,8 +20,9 @@
     <header>
         <nav>
             <section id="s1">
-                <span class="material-symbols-outlined">menu</span>
-                <div class="bordeic">
+                <span class="material-symbols-outlined" title="Menú próximamente">menu</span>
+                <div id="searchbar">
+                    
                     <span class="material-symbols-outlined">search</span>
                 </div>
             </section>
@@ -29,9 +30,9 @@
                 <a href="index.html"><h1>M&N</h1></a>
             </section>
             <section id="s3">
-                <div class="bordeic">
+                <a href="usuario.html"><div class="bordeic">
                     Usuario<span class="material-symbols-outlined">login</span>
-                </div>
+                </div></a>
                 <a href="carrito.html"><span class="material-symbols-outlined">shopping_cart</span></a>
             </section>
         </nav>
