--- a/usuario.html
+++ b/usuario.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>M&N</title>
+    <meta charset="UTF-8">
+    <title>Login Usuario</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,14 +11,13 @@
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet" />
 </head>
-
 <body>
     <header>
         <nav>
             <section id="s1">
                 <span class="material-symbols-outlined" title="Menú próximamente">menu</span>
                 <div id="searchbar">
-                    <input type="search" placeholder="Buscar..." />
+                   
                     <span class="material-symbols-outlined">search</span>
                 </div>
             </section>
@@ -36,23 +33,23 @@
         </nav>
     </header>
 
-    <div>
-        <img src="img/fotohero.jpg" id="hero" />
-    </div>
-
     <main>
-<main>
-  <section id="novedades">
-    <h2>LO MÁS NUEVO</h2>
-    
-    <div id="contenedor-productos" class="fila-productos"></div>
-  </section>
-</main>
+        <section class="login-container" id="login-section">
+            <h2 id="form-title">Iniciar Sesión</h2>
+            <form class="login-form" id="login-form">
+                <label for="usuario">Usuario</label>
+                <input type="text" id="usuario" name="usuario" required />
 
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" name="password" required />
+
+                <button type="submit" class="btn-login" id="login-btn">Ingresar</button>
+                <button type="button" class="btn-login btn-alt" id="toggle-btn">¿No tienes cuenta? Registrate</button>
+            </form>
         </section>
     </main>
 
-    <footer>
+      <footer>
         <div class="footer-info">
             <p>Av Advinciula 912, Pilar, Buenos Aires</p>
             <p>ungamalxd@gmail.com</p>
@@ -68,7 +65,6 @@
             <p>Todos los derechos reservados.</p>
         </div>
     </footer>
-    <script src="app.js"></script>
+<script src="app-4.js"></script>
 </body>
-
 </html>
