--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
     </footer>
     <script src="app.js"></script>
+    <script type="module" src="app-5.js"></script>
 </body>
 
 </html>
