--- a/panel.html
+++ b/panel.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
-    <title>Login Usuario</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Panel de Control</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="panel.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,57 +13,42 @@
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet" />
 </head>
-
 <body>
     <header>
         <nav>
             <section id="s1">
                 <span class="material-symbols-outlined" title="Menú próximamente">menu</span>
                 <div id="searchbar">
-
                     <span class="material-symbols-outlined">search</span>
                 </div>
             </section>
             <section id="s2">
-                <a href="index.html">
-                    <h1>M&N</h1>
-                </a>
+                <a href="index.html"><h1>M&N</h1></a>
             </section>
             <section id="s3">
-                <a href="usuario.html">
-                    <div class="bordeic">
-                        Usuario<span class="material-symbols-outlined">login</span>
-                    </div>
-                </a>
+                <a href="usuario.html"><div class="bordeic">
+                    Usuario<span class="material-symbols-outlined">login</span>
+                </div></a>
                 <a href="carrito.html"><span class="material-symbols-outlined">shopping_cart</span></a>
             </section>
         </nav>
     </header>
-
-    <main>
-        <section class="login-container" id="login-section">
-            <h2 id="form-title">Iniciar Sesión</h2>
-            <form class="login-form" id="login-form">
-                <label for="usuario">Usuario</label>
-                <input type="text" id="usuario" name="usuario" required />
-
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" required />
-
-                <label for="passwordrepeat"> Repetir Contraseña</label>
-                <input type="password" id="passwordrepeat" name="passwordrepeat" required />
-
-                <div style="margin: 10px 0;">
-                    <input type="checkbox" id="show-passwords" />
-                    <label for="show-passwords" style="font-size: 0.95em;">Mostrar contraseñas</label>
-                </div>
-
-                <button type="submit" class="btn-login" id="login-btn">Ingresar</button>
-                <button type="button" class="btn-login btn-alt" id="toggle-btn">¿No tienes cuenta? Registrate</button>
-            </form>
-        </section>
+    <main id="boxpaneldecontrol">
+        <h1>Panel de Control</h1>
+        <div id="boxpanelingresar">
+            <label for="inpproducto">Producto:</label>
+            <input type="text" id="inpproducto">
+            <label for="inpdescripcion">Descripción:</label>
+            <input type="text" id="inpdescripcion">
+            <label for="inpprecio">Precio:</label>
+            <input type="text" id="inpprecio">
+            <label for="inpstock">Stock:</label>
+            <input type="text" id="inpstock">
+            <label for="inpimagen">Imagen</label>
+            <input type="file" id="inpimagen">
+            <button>Ingresar</button>
+        </div>
     </main>
-
     <footer>
         <div class="footer-info">
             <p>Av Advinciula 912, Pilar, Buenos Aires</p>
@@ -79,7 +65,6 @@
             <p>Todos los derechos reservados.</p>
         </div>
     </footer>
-    <script src="app-4.js"></script>
+    <script src="panel.js"></script>
 </body>
-
 </html>
