--- a/usuario.html
+++ b/usuario.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <section id="s1">
-                <span class="material-symbols-outlined" title="Menú próximamente">menu</span>
+           
                 <div id="searchbar">
 
                     <span class="material-symbols-outlined">search</span>
@@ -50,7 +50,7 @@
                 <input type="password" id="password" name="password" required />
 
                 <label for="passwordrepeat"> Repetir Contraseña</label>
-                <input type="password" id="passwordrepeat" name="passwordrepeat" required />
+                <input type="password" id="passwordrepeat" name="passwordrepeat" />
 
                 <div style="margin: 10px 0;">
                     <input type="checkbox" id="show-passwords" />
