--- a/detalle.html
+++ b/detalle.html
@@ -33,14 +33,23 @@
                 <a href="usuario.html"><div class="bordeic">
                     Usuario<span class="material-symbols-outlined">login</span>
                 </div></a>
-                <a href="carrito.html"><span class="material-symbols-outlined">shopping_cart</span></a>
+                                <a href="carrito.html" class="carrito-icono">
+                 <span class="material-symbols-outlined">shopping_cart</span>
+                 <span id="carrito-count" class="carrito-count">0</span>
+                </a>
             </section>
         </nav>
     </header>
 
   
   <main>
-    <h2 class="titulo-seccion">Detalle de Producto</h2>
+    <div  class="titulo-seccion">
+       <span class="material-symbols-outlined" id="arrow"><a href="index.html">arrow_back</a>
+
+</span>
+      <h2>Detalle de Producto</h2>
+    </div>
+    
     <div id="producto"></div>
   </main>
 
@@ -63,5 +72,6 @@
   </footer>
 
   <script src="app-2.js"></script>
+  <script src="carrito.js"></script>
 </body>
 </html>
