--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <a href="usuario.html"><div class="bordeic">
                     Usuario<span class="material-symbols-outlined">login</span>
                 </div></a>
-                <a href="carrito.html"><span class="material-symbols-outlined">shopping_cart</span></a>
+                <a href="carrito.html" class="carrito-icono">
+                 <span class="material-symbols-outlined">shopping_cart</span>
+                 <span id="carrito-count" class="carrito-count">0</span>
+                </a>
             </section>
         </nav>
     </header>
@@ -79,6 +82,7 @@
     </footer>
     <script src="app.js"></script>
     <script type="module" src="app-5.js"></script>
+    <script src="carrito.js"></script>
 </body>
 
 </html>
