--- a/panel.html
+++ b/panel.html
@@ -34,9 +34,10 @@
               Usuario<span class="material-symbols-outlined">login</span>
             </div></a
           >
-          <a href="carrito.html"
-            ><span class="material-symbols-outlined">shopping_cart</span></a
-          >
+                         <a href="carrito.html" class="carrito-icono">
+                 <span class="material-symbols-outlined">shopping_cart</span>
+                 <span id="carrito-count" class="carrito-count">0</span>
+                </a>
         </section>
       </nav>
     </header>
@@ -73,5 +74,6 @@
     </main>
 
     <script src="panel.js" type="module"></script>
+    <script src="carrito.js"></script>
   </body>
 </html>
