--- a/usuario.html
+++ b/usuario.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Usuario</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
@@ -34,7 +35,10 @@
                         Usuario<span class="material-symbols-outlined">login</span>
                     </div>
                 </a>
-                <a href="carrito.html"><span class="material-symbols-outlined">shopping_cart</span></a>
+                                <a href="carrito.html" class="carrito-icono">
+                 <span class="material-symbols-outlined">shopping_cart</span>
+                 <span id="carrito-count" class="carrito-count">0</span>
+                </a>
             </section>
         </nav>
     </header>
@@ -80,6 +84,7 @@
         </div>
     </footer>
     <script src="app-4.js"></script>
+    <script src="carrito.js"></script>
 </body>
 
 </html>
