--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </section>
             <section id="s2">
-                <a href="index.html"><h1>M&N</h1></a>
+                <a href="index.html"><h1>O&A</h1></a>
             </section>
             <section id="s3">
                 <a href="usuario.html"><div class="bordeic">
